--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </a>
         <a href="http://odnoklassniki.ru"><img src="img/odn.png" width="100" height="100" alt="ссылки сайта Очакова" />
         </a>
-        <a href="http://yandex.ru"><img src="img/yandex.png" width="100" height="100" alt="ссылки сайта Очакова" />
+        <a href="http://facebook.com"><img src="img/facebook.png" width="100" height="100" alt="ссылки сайта Очакова" />
         </a>
         <a href="http://youtube.com"><img src="img/youtube.png" width="100" height="100" alt="ссылки сайта Очакова" />
         </a>
